@@ -408,6 +408,19 @@ parameter to *connector*::
 The example limits amount of parallel connections to `30`.
 
 
+Resolving using custom nameservers
+----------------------------------
+
+In order to specify the nameservers to when resolving the hostnames,
+aiodns is required.
+
+    from aiohttp.resolver import AsyncResolver
+    
+    
+    resolver = AsyncResolver(nameservers=["8.8.8.8", "8.8.4.4"])
+    conn = aiohttp.TCPConnector(resolver=resolver)
+
+
 SSL control for TCP sockets
 ---------------------------
 
